@@ -98,7 +98,7 @@ public class WolfSSLParametersHelper
             try {
                 /* load WolfSSLJDK8Helper at runtime, not compiled on older JDKs */
                 Class<?> cls = Class.forName("com.wolfssl.provider.jsse.WolfSSLJDK8Helper");
-                Object obj = cls.newInstance();
+                Object obj = cls.getConstructor().newInstance();
                 Class[] paramList = new Class[3];
                 paramList[0] = javax.net.ssl.SSLParameters.class;
                 paramList[1] = java.lang.reflect.Method.class;
@@ -167,7 +167,7 @@ public class WolfSSLParametersHelper
             try {
                 /* load WolfSSLJDK8Helper at runtime, not compiled on older JDKs */
                 Class<?> cls = Class.forName("com.wolfssl.provider.jsse.WolfSSLJDK8Helper");
-                Object obj = cls.newInstance();
+                Object obj = cls.getConstructor().newInstance();
                 Class[] paramList = new Class[2];
                 paramList[0] = javax.net.ssl.SSLParameters.class;
                 paramList[1] = com.wolfssl.provider.jsse.WolfSSLParameters.class;
